Update CodeGenerator Update Template Files Generated User Template Class